<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sparkbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/status_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="14dp"
    android:paddingRight="14dp">

    <android.support.text.emoji.widget.EmojiTextView
        android:id="@+id/status_reblogged"
        android:drawableStart="?attr/status_reblog_small_drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/status_reblogged_bar_padding_top"
        android:drawablePadding="6dp"
        android:paddingStart="38dp"
        android:paddingEnd="8dp"
        android:textColor="?android:textColorTertiary"
        android:textSize="?attr/status_text_medium"
        tools:text="ConnyDuck boosted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.keylesspalace.tusky.view.RoundedImageView
        android:id="@+id/status_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/action_view_profile"
        android:scaleType="centerCrop"
        tools:src="@drawable/avatar_default"
        app:layout_constraintTop_toBottomOf="@id/status_reblogged"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/status_display_name"
        />

    <com.keylesspalace.tusky.view.RoundedImageView
        android:id="@+id/status_avatar_reblog"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@null"
        android:visibility="gone"
        tools:src="@color/accent"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/status_avatar"
        app:layout_constraintEnd_toEndOf="@id/status_avatar"/>


    <android.support.text.emoji.widget.EmojiTextView
        android:id="@+id/status_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingEnd="@dimen/status_display_name_padding_end"
        android:paddingStart="0dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="?attr/status_text_medium"
        android:textStyle="normal|bold"
        tools:text="Ente"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/status_avatar"
        app:layout_constraintTop_toBottomOf="@id/status_reblogged"
        app:layout_constraintEnd_toStartOf="@id/status_username"
        app:layout_constraintBottom_toTopOf="@id/status_content_warning_description"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/status_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?android:textColorSecondary"
        android:textSize="?attr/status_text_medium"
        tools:text="\@Entenhausen"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/status_display_name"
        app:layout_constraintEnd_toStartOf="@id/status_timestamp_info"
        app:layout_constraintTop_toTopOf="@id/status_display_name"
        app:layout_constraintBottom_toBottomOf="@id/status_display_name"/>

    <TextView
        android:id="@+id/status_timestamp_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="?android:textColorSecondary"
        android:textSize="?attr/status_text_medium"
        tools:text="13:37"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/status_username"
        app:layout_constraintTop_toTopOf="@id/status_display_name"
        app:layout_constraintBottom_toBottomOf="@id/status_display_name"/>

    <android.support.text.emoji.widget.EmojiTextView
        android:id="@+id/status_content_warning_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.1"
        android:textColor="?android:textColorPrimary"
        android:textSize="?attr/status_text_medium"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/status_display_name"
        app:layout_constraintStart_toStartOf="@id/status_display_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/status_content_warning_button"/>

    <ToggleButton
        android:id="@+id/status_content_warning_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:background="?attr/content_warning_button"
        android:minHeight="0dp"
        android:minWidth="150dp"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:textAllCaps="true"
        android:textOff="@string/status_content_warning_show_more"
        android:textOn="@string/status_content_warning_show_less"
        android:textSize="?attr/status_text_medium"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/status_content_warning_description"
        app:layout_constraintStart_toStartOf="@id/status_content_warning_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/status_content"

        />

    <android.support.text.emoji.widget.EmojiTextView
        android:id="@+id/status_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:lineSpacingMultiplier="1.1"
        android:textColor="?android:textColorPrimary"
        android:textSize="?attr/status_text_medium"
        tools:text="This is a status"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/status_content_warning_button"
        app:layout_constraintStart_toStartOf="@id/status_display_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ToggleButton
        android:id="@+id/button_toggle_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/status_content_show_less"
        android:textOn="@string/status_content_show_more"
        android:background="?attr/content_warning_button"
        android:minHeight="0dp"
        android:minWidth="150dp"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textAllCaps="true"
        android:textSize="?attr/status_text_medium"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/status_display_name"
        app:layout_constraintTop_toBottomOf="@id/status_content"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/status_media_preview_0"
        android:layout_width="0dp"
        android:layout_height="@dimen/status_media_preview_height"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/status_media_preview_margin_top"
        app:layout_constraintEnd_toStartOf="@+id/status_media_preview_1"
        app:layout_constraintStart_toStartOf="@id/status_display_name"
        app:layout_constraintTop_toBottomOf="@id/button_toggle_content"
        app:layout_constraintBottom_toTopOf="@id/status_media_preview_2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/status_media_preview_1"
        android:layout_width="0dp"
        android:layout_height="@dimen/status_media_preview_height"
        android:layout_marginStart="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/status_media_preview_0"
        app:layout_constraintTop_toTopOf="@id/status_media_preview_0"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/status_media_preview_2"
        android:layout_width="0dp"
        android:layout_height="@dimen/status_media_preview_height"
        android:layout_marginTop="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/status_media_preview_3"
        app:layout_constraintStart_toStartOf="@id/status_media_preview_0"
        app:layout_constraintTop_toBottomOf="@+id/status_media_preview_0"
        app:layout_constraintBottom_toTopOf="@id/status_reply"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/status_media_preview_3"
        android:layout_width="0dp"
        android:layout_height="@dimen/status_media_preview_height"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@id/status_media_preview_1"
        app:layout_constraintStart_toEndOf="@id/status_media_preview_2"
        app:layout_constraintTop_toBottomOf="@+id/status_media_preview_1"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/status_media_overlay_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/status_media_preview_0"
        app:layout_constraintEnd_toEndOf="@+id/status_media_preview_0"
        app:layout_constraintStart_toStartOf="@+id/status_media_preview_0"
        app:layout_constraintTop_toTopOf="@+id/status_media_preview_0"
        app:srcCompat="?attr/play_indicator_drawable"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/status_media_overlay_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/status_media_preview_1"
        app:layout_constraintEnd_toEndOf="@+id/status_media_preview_1"
        app:layout_constraintStart_toStartOf="@+id/status_media_preview_1"
        app:layout_constraintTop_toTopOf="@+id/status_media_preview_1"
        app:srcCompat="?attr/play_indicator_drawable"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/status_media_overlay_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/status_media_preview_2"
        app:layout_constraintEnd_toEndOf="@+id/status_media_preview_2"
        app:layout_constraintStart_toStartOf="@+id/status_media_preview_2"
        app:layout_constraintTop_toTopOf="@+id/status_media_preview_2"
        app:srcCompat="?attr/play_indicator_drawable"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/status_media_overlay_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/status_media_preview_3"
        app:layout_constraintEnd_toEndOf="@+id/status_media_preview_3"
        app:layout_constraintStart_toStartOf="@+id/status_media_preview_3"
        app:layout_constraintTop_toTopOf="@+id/status_media_preview_3"
        app:srcCompat="?attr/play_indicator_drawable"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/status_sensitive_media_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:contentDescription="@null"
        android:padding="@dimen/status_sensitive_media_button_padding"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_eye_24dp"
        app:layout_constraintTop_toTopOf="@id/status_media_preview_0"
        app:layout_constraintStart_toStartOf="@id/status_media_preview_0"/>

    <android.support.text.emoji.widget.EmojiTextView
        android:id="@+id/status_sensitive_media_warning"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/sensitive_media_warning_background_color"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:orientation="vertical"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="?attr/status_text_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/status_media_preview_2"
        app:layout_constraintEnd_toEndOf="@id/status_media_preview_1"
        app:layout_constraintStart_toStartOf="@id/status_media_preview_0"
        app:layout_constraintTop_toTopOf="@id/status_media_preview_0"/>

    <!--TODO: Check if this needs emoji support-->
    <android.support.text.emoji.widget.EmojiTextView
        android:id="@+id/status_media_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:textSize="?attr/status_text_medium"
        android:visibility="gone"
        android:layout_marginTop="@dimen/status_media_preview_margin_top"
        app:layout_constraintTop_toBottomOf="@id/button_toggle_content"
        app:layout_constraintStart_toEndOf="@id/status_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/status_reply"/>


    <ImageButton
        android:id="@+id/status_reply"
        style="?attr/image_button_style"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_reply"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:srcCompat="@drawable/ic_reply_24dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/status_media_preview_2"
        app:layout_constraintStart_toStartOf="@id/status_display_name"
        app:layout_constraintEnd_toStartOf="@id/status_reblog"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <at.connyduck.sparkbutton.SparkButton
        android:id="@+id/status_reblog"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:contentDescription="@string/action_reblog"
        sparkbutton:activeImage="@drawable/reblog_active"
        sparkbutton:iconSize="24dp"
        sparkbutton:inactiveImage="?attr/status_reblog_inactive_drawable"
        sparkbutton:primaryColor="@color/status_reblog_button_marked_dark"
        sparkbutton:secondaryColor="@color/status_reblog_button_marked_light"
        app:layout_constraintBottom_toBottomOf="@id/status_reply"
        app:layout_constraintTop_toTopOf="@id/status_reply"
        app:layout_constraintStart_toEndOf="@id/status_reply"
        app:layout_constraintEnd_toStartOf="@id/status_favourite" />

    <at.connyduck.sparkbutton.SparkButton
        android:id="@+id/status_favourite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:contentDescription="@string/action_favourite"
        sparkbutton:activeImage="?attr/status_favourite_active_drawable"
        sparkbutton:iconSize="24dp"
        sparkbutton:inactiveImage="?attr/status_favourite_inactive_drawable"
        sparkbutton:primaryColor="@color/status_favourite_button_marked_dark"
        sparkbutton:secondaryColor="@color/status_favourite_button_marked_light"
        app:layout_constraintTop_toTopOf="@id/status_reply"
        app:layout_constraintBottom_toBottomOf="@id/status_reply"
        app:layout_constraintStart_toEndOf="@id/status_reblog"
        app:layout_constraintEnd_toStartOf="@id/status_more"/>

    <ImageButton
        android:id="@+id/status_more"
        style="?attr/image_button_style"
        android:layout_width="24dp"
        android:layout_height="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_more"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_more_horiz_24dp"
        app:layout_constraintTop_toTopOf="@id/status_reply"
        app:layout_constraintBottom_toBottomOf="@id/status_reply"
        app:layout_constraintStart_toEndOf="@id/status_favourite"
        app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>
